<?xml version="1.0" encoding="utf-8"?><!--修改wifi密码页面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout style="@style/wifi_set_linear_style">

            <EditText
                android:id="@+id/et_old_pwd"
                style="@style/wifi_pwd_input_style"
                android:hint="@string/input_old_pwd_text" />

            <View style="@style/developer_middle_line_style" />

        </LinearLayout>

        <LinearLayout style="@style/wifi_set_linear_style">

            <EditText
                android:id="@+id/et_new_pwd"
                style="@style/wifi_pwd_input_style"
                android:hint="@string/input_new_pwd_text" />

            <View style="@style/developer_middle_line_style" />

        </LinearLayout>

        <LinearLayout style="@style/wifi_set_linear_style">

            <EditText
                android:id="@+id/et_confirm_pwd"
                style="@style/wifi_pwd_input_style"
                android:hint="@string/confirm_pwd_text" />

            <View style="@style/developer_middle_line_style" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_change"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_green_rectangle_normal"
        android:text="@string/confirm_change_text"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="15sp" />


</LinearLayout>