<?xml version="1.0" encoding="utf-8"?><!--修改wifi密码弹窗-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/frame_input_pwd_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/input_password_text"
            android:textColor="#030303"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/frame_input_gray_pwd"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color"
            android:textCursorDrawable="@drawable/edittext_color_cursor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#c2c2c2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/gray_color"
                android:textSize="17sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c2c2c2" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm_text"
                android:textColor="@color/green_color"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>