<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F5F8"
    >

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerInParent="true"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Collecting"
             android:gravity="center"
             android:textColor="#4E5969"
             android:textSize="15dp"

             />

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Collected_time"
                 android:textColor="#4E5969"
                 android:textSize="15dp"
                 />


             <Chronometer
                 android:id="@+id/timer"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#00DAB0"
                 android:textSize="15dp"
                 android:format="%s"
                 />

         </LinearLayout>


     </LinearLayout>



    <TextView
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/CollectedDate"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:gravity="center"
        />


</RelativeLayout>
